samples/_failures_safe/1761314503_938583_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_282eacae.c: In function ‘main’:
./samples/SAFE/__tmp_282eacae.c:149:5: error: expected declaration or statement at end of input
  149 |     }
      |     ^
